test/type/wrong/hr6.kk.out
test/type/wrong/hr6.kk(9,15): error: types do not match
 context : g(f)
 term : f
 inferred type: (x : (int) -> int) -> _e int
 expected type: (forall<a> (a) -> a) -> int